# NeuralCut

./: .env.example  .gitignore  README.md  docker-compose.yml  railway.json  render.yaml
backend/: Dockerfile  pyproject.toml  requirements.txt
backend/app/: compositor.py  config.py  db.py  deps.py  events.py  main.py  orchestrator.py  storage.py  worker.py
backend/app/agents/: orchestrator.py
backend/app/providers/: __init__.py  base.py  factory.py  live.py  mock.py
backend/app/routers/: understand.py
backend/app/routes/: jobs.py  stream.py
backend/streamlit/: dashboard.py
frontend/: .env.local.example  .gitignore  middleware.ts  next-env.d.ts  next.config.mjs  package-lock.json  package.json  tailwind.config.js  tailwind.config.ts
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/app/dashboard/: page.tsx
frontend/app/login/: page.tsx
frontend/app/signup/: page.tsx
frontend/app/studio/: page.tsx
frontend/app/studio/[projectId]/: page.tsx
frontend/lib/: Logo.tsx
supabase/migrations/: 0001_init.sql  0002_rls.sql  0003_storage.sql
veedra/: .env.example  docker-compose.yml
veedra/backend/app/: deps.py  main.py
veedra/backend/app/models/: schemas.py
veedra/backend/app/providers/: base.py  live.py
veedra/backend/app/routers/: agent.py  projects.py
veedra/backend/app/services/: compositor.py  storage.py  supabase.py
veedra/backend/app/workers/: celery_app.py
veedra/frontend/app/: globals.css  layout.tsx
veedra/frontend/app/studio/: page.tsx
veedra/frontend/lib/: api.ts
veedra/frontend/lib/supabase/: server.ts
