[project]
name = "veedra-backend"
version = "0.1.0"
description = "Veedra AI video studio backend"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115",
  "uvicorn[standard]>=0.32",
  "pydantic>=2.9",
  "pydantic-settings>=2.5",
  "httpx>=0.27",
  "sse-starlette>=2.1",
  "supabase>=2.9",
  "celery[redis]>=5.4",
  "redis>=5.1",
  "psycopg[binary]>=3.2",
  "python-multipart>=0.0.12",
  "anthropic>=0.39",
  "openai>=1.54",
  "Pillow>=10.4",
  "python-dotenv>=1.0",
]

[tool.ruff]
line-length = 100
