[project]
name = "neuralcut-backend"
version = "0.1.0"
description = "NeuralCut API + Celery worker (FastAPI, Celery, Redis, Supabase, ffmpeg)"
requires-python = ">=3.11"

dependencies = [
    "fastapi>=0.110",
    "uvicorn[standard]>=0.29",
    "celery>=5.3",
    "redis[hiredis]>=5.0",
    "supabase>=2.4",
    "pyjwt>=2.8",
    "pydantic-settings>=2.2",
    "pillow>=10.0",
    "python-multipart>=0.0.9",
    "requests>=2.31",
    "streamlit>=1.33",
]

[project.optional-dependencies]
# PROVIDER_MODE=live image generation. Heavy — install only where you run live.
# CPU works but is slow; a CUDA GPU is strongly recommended.
torch = [
    "torch>=2.2",
    "diffusers>=0.27",
    "transformers>=4.40",
    "accelerate>=0.29",
]
llm = ["openai>=1.20"]

[tool.setuptools]
packages = ["app"]
